# momentum-ai

./: README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  release.yml
public/: version.json
scripts/: gen-version.mjs  write-version.mjs
src/: App.css  App.jsx  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/ai/: brain.js
src/components/: BackBar.jsx  MicBlock.jsx  Shell.jsx
src/hooks/: useMicDevices.js  useUpdateBanner.js
src/pages/: Home.jsx  LiveCoach.jsx  Recorder.jsx  Roleplay.jsx
src/pages/scripts/: script.veterans.js
