[package]
name = "tauri-appmomentum-ai"
version = "2.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_appmomentum_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["native-tls"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
